fix video background flicker

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -802,6 +802,10 @@ $custom-transition: cubic-bezier(0.455, 0.03, 0.515, 0.955);
 				display: block;
 			}
 
+			.vidbg-container {
+				background-size: 576px auto !important;
+			}
+
 			h1 {
 				font-size: 3em;
 			}
